syntax = "proto3";
package rental.v1;
option go_package = "cooclar/rental/api/gen/v1;rentalpb";

// 坐标
message Location {
  double latitude = 1;
  double longitude = 2;
}

// 值类型 定义位置状态
message LocationStatus {
  Location location = 1; // 位置
  int32 fee_cent = 2; // 费用
  double km_driven = 3; // 行程距离
  string  poi_name = 4;
}

// 行程 枚举类型
enum TripStatus {
  TS_NOT_SPECIFIED = 0;
  IN_PROGRESS = 1;
  FINISHED = 2;
}

// 实体类型 entity
message TripEntity {
  string  id =1;
  Trip trip = 2;
}

// 值类型 定义行程
message Trip {
  string account_id = 1;
  string car_id = 2;
  //起点
  LocationStatus start = 3;
  LocationStatus current = 4; // 当前点
  // 终点
  LocationStatus end = 5;
  TripStatus status = 6;
}

message CreateTripRequest{
  Location start = 1;
  string car_id = 2;
}

message GetTripRequest {
  string id = 1;
}

message GetTripsRequest {
  TripStatus status = 1;
}
message GetTripResponse {
  repeated TripEntity trips = 1;
}

message UpdateTripRequest {
  string id = 1;
  Location current = 2;
  bool end_trip = 3;
}

service TripService {
  rpc CreateTrip(CreateTripRequest) returns (TripEntity);
  rpc GetTrip(GetTripRequest) returns (Trip);
  rpc GetTrips (GetTripsRequest) returns (GetTripResponse);
  rpc UpdateTrip (UpdateTripRequest) returns (Trip);
}